# advent-of-code-manager

./: .gitignore  README.md  config.yaml  pyproject.toml
aoc_manager/: app.py  cli.py  main.py
aoc_manager/modules/inputs/: server.py  ui.py
aoc_manager/modules/solutions/: server.py  ui.py
aoc_manager/modules/solver/: server.py  ui.py
aoc_manager/tables/: answer.py  guess.py  input.py  log.py  solution.py
aoc_manager/tools/: config.py  functions.py  import_solver.py  log.py  metastore.py  problem_solver.py  solver_template.py
aoc_manager/tools/grid/: cursor.py  map.py
tests/: test_functions.py  test_grid_cursor.py  test_grid_map.py
tests/testing_data/: cursor.py  list.py  map.py  number.py  string.py
